--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/db_tech_marrket?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://localhost/db_thuong_mai_dt?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=2002
+
+#spring.datasource.url=jdbc:mysql://103.188.82.155:3306/db_tech_marrket?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=doan
+#spring.datasource.password=QuangThoi2002@
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
@@ -63,3 +68,17 @@ app.one.signal.end.point.api = https://onesignal.com/api/v1/notifications
 cloudinary.cloud_name =dbn0gobqq
 cloudinary.api_key =173738177218716
 cloudinary.api_secret =6f0J9MhgtQDFbBYepf8Zvep-deE
+
+#Config payPal
+paypal.mode=sandbox
+paypal.client.app=AQqE398iI7fO10eaBXRanTGHEprUh7AlR_u8oNkFETmhRbRrGV9ZmUZkeAWQxUM6IFGjGALZ1XBQdhoL
+paypal.client.secret=EAEFg3TKwqRwOcmFjwWWmtxx5M9QnMYrxn-fOR-2dB7hmOr55PgVZKOwoW_SP23JSTJi19YFwzJvxINN
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=123456
+
+rabbitmq.notification.queue=QUEUE_NOTIFICATION
+rabbitmq.app=TECHMARKET
